--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 
 <body>
     <div id="google_translate_element"></div>
-
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script type="text/javascript">
     function googleTranslateElementInit() {
     new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
     }
     </script>
 
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <section class="header">
         
         <nav>
@@ -32,6 +31,8 @@
 
     </section>
 
+
+    <div class="parallax1"></div>
 
 
     <section class="box">
@@ -49,7 +50,7 @@
         </div>
     </section>
 
-
+    <div class="parallax2"></div>
 
     <section class="box">
         <div class = "patient-box2">
@@ -59,6 +60,7 @@
         </div>
     </section>
 
+    <div class="parallax3"></div>
 
     <section class="box">
         <div class = "patient-box3">
