--- a/Content/patients/patient.html
+++ b/Content/patients/patient.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <html>
 <head>
     <title>Testing Website</title>
@@ -8,7 +8,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href = "../../testmain.html"><img src = "../../Resources/Images/logo.png"></a>
+            <a href = "../../index.html"><img src = "../../Resources/Images/logo.png"></a>
             <div class="nav-links">
                 <ul>
                     <li><a href="">About</li>
@@ -23,86 +23,4 @@
 
 </html>
 =======
-<html lang="zh">
-<head>
-<title>Drop-down menu</title>
-<link rel = "stylesheet" href = "patientStyle.css">
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
 
-<!-- Menu -->
-</head>
-  <body>
-    <div class = "menu-bar">
-        <ul>
-            <li class = "active"><a href = "../web/testweb/Website/main.html">Home</a>
-
-            <li><a href = "../../Content/patients/patient.html">Patients</a>
-
-            </li>
-
-            <li><a href = "#">General Public</a>
-                <div class = "Submenu-1">
-                    <ul>
-                        <li><a href = "../../Content/Maps/maps.html">Map 1</a></li>
-                        <li><a href = "../../Content/Maps/worldmap.html">World Map</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <li><a href = "#">Maps</a>
-                <div class = "Submenu-1">
-                    <ul>
-                        <li><a href = "../../Content/Maps/maps.html">Map 1</a></li>
-                        <li><a href = "../../Content/Maps/worldmap.html">World Map</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <li><a href = "#">Healthcare Providers</a>
-                <div class = "Submenu-1">
-                    <ul>
-                        <li><a href = "../../Content/Maps/maps.html">Map 1</a></li>
-                        <li><a href = "../../Content/Maps/worldmap.html">World Map</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <li><a href = "#">Vaccination Coverage</a>
-                <div class = "Submenu-1">
-                    <ul>
-                        <li><a href = "../../Content/Maps/maps.html">Map 1</a></li>
-                        <li><a href = "../../Content/Maps/worldmap.html">World Map</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <li><a href = "#">Resources</a>
-
-                <div class = "Submenu-1">
-                    <ul>
-                        <li><a href = "#">Community</a>
-                            <div class = "Subsubmenu-1">
-                                <ul>
-                                    <li> <a href = "../../Content/KnowHBV/knowHBV.html">Know HBV</a></li>
-                                    <li> <a href = "../../Content/HepBMom/hepBMom.html">HepBMom</a></li>
-                                    <li> <a href = "../../Content/VideoPSA/videoPSA.html">PSA Video</a></li>
-                                </ul>
-                            </div>
-                        </li>
-
-
-                        <li><a href = "#">Healthcare</a>
-                            <div class = "Subsubmenu-1">
-                                <ul>
-                                    <li> <a href = "../../Content/Handbook/handbook.html">2016 Handbook</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </li>
-        </ul>
-    </div>
-  </body>
-</head>
->>>>>>> 337430bd3e0b0e9506821ff9db206661a31681b3
