--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
     <div class="parallax2"></div>
 
-    <section class="box">
+    <section class="mission-box">
         <div class = "patient-box2">
-            <h1>Our Mission</h1>
-            <p1>Our high school clubs work to increase awareness of the dangers of hepatitis B and liver cancer, the ideals of the JoinJade Campaign, and provide information to better the health of the student body and the local community. 
-            </p1>
+            <h2>Our Mission</h2>
+                <p>Our high school clubs work to increase awareness of the dangers of hepatitis B and liver cancer, the ideals of the JoinJade Campaign, and provide information to better the health of the student body and the local community.</p>
         </div>
+        <div class="patient-box2b"></div>
     </section>
 
     <div class="parallax3"></div>
