--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <html>
 <head>
     <title>Testing Website</title>
-    <link rel = "stylesheet" href = "teststyle.css">
+    <link rel = "stylesheet" href = "index.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap');
     </style>
 </head>
 
 <body>
-    <div id="google_translate_element"></div>
+    <!--...<div id="google_translate_element"></div>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script type="text/javascript">
     function googleTranslateElementInit() {
     new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
     }
-    </script>
+    </script>-->
 
     <section class="header">
         
         <nav>
-            <a href = "testmain.html"><img src = "Resources/Images/logo.png"></a>
+            <a href = "index.html"><img src = "Resources/Images/logo.png"></a>
             <div class="nav-links">
                 <ul>
                     <li><a href="">About</li></a>
