header for every page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <section class="header">
         
         <nav>
-            <a href = "index.html"><img src = "Resources/Images/logo.png"></a>
+            <div class="image-box"><a href = "index.html"><img src = "Resources/Images/logo.png"></a></div>
+            
             <div class="nav-links">
                 <ul>
-                    <li><a href="">About</li></a>
-                    <li><a href="Content/patients/patient.html">For Patients</li></a>
-                    <li><a href="">For healthcare providers</li></a>
+                    <li><a href="Pages/overview/overview.html">Tổng Quan</li></a>
+                    <li><a href="Pages/activities/activities.html">Hoạt Động</li></a>
+                    <li><a href="Pages/communication/communication.html">Tài Liệu Truyền Thông</li></a>
+                    <li><a href="Pages/signup/signup.html">Đăng Ký</li></a>
                 </ul>
             </div>
         </nav>
@@ -76,9 +78,6 @@
         </div>
     </section>
 
-
-
-
     <section class="box">
         <div class = "patient-box4">
             <h1>Why HBV and Liver Cancer?</h1>
@@ -121,7 +120,6 @@
         </div>
     </section>
 
-
     <section class="box">
         <div class = "patient-box6">
             <h1>How To Start A New Club?</h1>
@@ -137,10 +135,6 @@
             </p1>
         </div>
     </section>
-
-
-
-
 
 </body>
 
