finished adding content, need to style

--- a/Pages/activities/activities.html
+++ b/Pages/activities/activities.html
@@ -31,6 +31,125 @@
         </nav>
     </section>
 
-  
+    <section class = "main-overview">
+        <h1>Tổng quan các hoạt động chính</h1>
+            <div class = "list1">
+                <ul><h4>Kế Hoạch Hoạt Động</h4>
+                    <li>Điều tra ban đầu về kiến thức, thái độ và hành vi liên quan đến viêm gan B của học sinh THPT. Kết quả của điều tra sẽ làm cơ sở để xây dựng các ý tưởng của hoạt động can thiệp.</li>
+                    <li>Xây dựng mạng lưới Team HBV tại các trường THPT trên địa bàn Hà Nội và sau đó là cả nước.</li>
+                    <li>Thành viên nòng cốt của Team HBV là các thành viên Founder (Team HBV Vietnam). Bao gồm các ban (Nội dung, Media, Truyền thông, Hậu cần, Design, Tài chính).</li>
+                    <li>Hoạt động chung của Team HBV Vietnam sẽ bao gồm các hoạt động:
+                        <ul class = "hello">
+                            <li>Xây dựng các kênh truyền thông của Team trên MXH (Tik Tok, Facebook, Instagram) để tăng độ nhận diện của nhóm, qua đó nâng cao nhận thức của cộng đồng về viêm gan B</li>
+                            <li>Tổ chức các sự kiện. Ví dụ: đêm nhạc, hội chợ</li>
+                            <li>Huy động tài trợ, nghiên cứu khoa học</li>
+                            <li>Tổ chức hội thảo quốc gia</li>
+                        </ul>
+                    </li>
+                    <li>Tại các trường THPT: 
+                        <ul class = "hello1">
+                            <li>Hỗ trợ thành lập các nhóm của các trường THPT</li>
+                            <li>Các hoạt động truyền thông về viêm gan B do các nhóm trong các trường THPT tổ chức: tổ chức sự kiện, phát tờ rơi, chương trình chạy bộ/đạp xe,...</li>
+                        </ul>
+                    </li>
+                </ul>
+    </section>
+
+    <section class = "survey">
+        <h1>Khảo Sát Kiến Thức Về Chủ Đề Viêm Gan Ở Học Sinh Phổ Thông Trung Học</h1>
+        
+            <p1>Giới thiệu</p1>
+            <p>Khảo sát này được thực hiện bởi Câu lạc bộ TEAM HBV, hợp tác với Trung tâm gan Châu Á Đại học Stanford, nhằm tìm hiểu về kiến thức của học sinh PTTH về bệnh viêm gan. Người tham gia không cần cung cấp thông tin cá nhân như họ tên hay địa chỉ email
+            </p>
+
+            <p1>Mục tiêu
+            </p1>
+            <p>Điều tra đánh giá kiến thức, thái độ và hành vi liên quan đến viêm gan B của học sinh THPT. Kết quả của điều tra sẽ làm cơ sở để xây dựng các ý tưởng của hoạt động can thiệp.
+            </p>
+
+            <p1>Đối tượng tham gia:</p1> <p3>Học sinh phổ thông trung học</p3>
+
+            <p1>Phương pháp:</p1> <p3>Điều tra cắt ngang trên 1000 học sinh PTTH, sử dụng <a href="https://docs.google.com/forms/d/1W2LFwx3a0Ng7nchmlhLbnFXZkacn4CaKmF0PMRPrI9o/edit" target ="_blank">bảng hỏi có cấu trúc.</a> </p3>
+
+    </section>
+
+    <h3>Một Số Kết Quả Chính</h3>
+    <section class = "các hoạt động truyền thông">
+        <p>blank</p>
+    </section>
+    
+    <section class = "Mạng Xã Hội">
+        <a href="https://www.facebook.com/profile.php?id=100085488465781&sk=about" target ="_blank">Facebook</a>
+    </section>
+
+    <section class = "Thông Báo">
+        <p>Tuyển thành viên</p>
+    </section>
+
+    <section class = "Mở-Đơn-Tuyển-Thành-Viên">
+        <img src="../../Resources/Images/aaaa.png" class="image"></img>
+        <div class = "signup">
+            <ul>
+                <li>Đơn đăng kí: https://forms.gle/YPN6hmHsY83Ly4Kr9</li>
+                <li>Thời gian đóng đơn: 23h59’ ngày 18/11/2022</li>
+                <li>Đối tượng: Các bạn học sinh, sinh viên trên toàn quốc (trên Thành phố Hà Nội với các ban Hậu cần và Media)</li>
+                <li>Link Tổng quan dự án: https://tinyurl.com/tongquanvnteamhbv</li>
+            </ul>
+        </div>
+        <section class = "big-paragraph">
+            <p>Vietnam Team HBV đã chính thức mở đơn!</p>
+            <p>Ú oà! Đừng để mình là một người đến sau! Biết các bạn đã rất mong chờ để được trở thành một mảnh ghép của Vietnam Team HBV, nên chúng mình sẽ luôn đứng đây và chờ những lá đơn tâm huyết của mọi người gửi đến, dù mưa giông bão táp chẳng quan tâm đến ngày đêm đây! Vietnam Team HBV xin được trân trọng thông báo:</p>
+            <p>CHÍNH THỨC MỞ ĐƠN TUYỂN THÀNH VIÊN VIETNAM TEAM HBV!</p>
+            <div class = "list1">
+                <ul>
+                    <li>Ô kìa, Vietnam Team HBV là gì vậy nhỉ?
+                        <ul class = "hello">
+                            <li>Theo thống kê gần đây, Việt Nam nằm trong vùng có tỷ lệ nhiễm virus viêm gan cao trên thế giới, với khoảng 8 triệu người nhiễm viên gan B và một triệu người mắc viêm gan C. Trong số đó, mỗi năm có hơn 40 ngàn người tử vong. Một trong những nguyên nhân gây ra tình trạng đáng báo động này có lẽ nằm ở mức độ phủ sóng cũng như nhận biết về virus và căn bệnh viêm gan B tại Việt Nam còn chưa cao.</li>
+                            <li>Nhận thấy tình hình đó, Vietnam Team HBV được thành lập với sứ mệnh giới thiệu và truyền tải cho cộng đồng về bệnh viêm gan B tại Việt Nam. Tuy nhiên, để thực thi nhiệm vụ cao cả ấy, chúng mình cũng cần đến sự góp sức của những nhân tố quan trọng, những bạn trẻ đầy tài năng và nhiệt huyết.</li>
+                        </ul>
+                    </li>
+                    <li>Các vị trí trong gia đình Vietnam Team HBV mà các bạn có thể cân nhắc lựa chọn:
+                        <ul class = "hello1">
+                            <li>Ban Loa Đài (Ban Truyền Thông)</li>
+                            <li>Ban Chắp Bút (Ban Nội Dung)</li>
+                            <li>Ban Đô La (Ban Tài Chính)</li>
+                            <li>Ban Đồ Đạc (Ban Hậu Cần)</li>
+                            <li>Ban Hoa Tay (Ban Design)</li>
+                            <li>Ban Máy Ảnh (Ban Media)</li>
+                        </ul>
+                    </li>
+                    <li>Quyền lợi của các thành viên Vietnam Team HBV:
+                        <ul class = "hello2">
+                            <li>Trải nghiệm các hoạt động, chương trình vì cộng đồng trên quy mô Quốc tế (chiến dịch JoinJade, mạng lưới Team HBV trên toàn cầu …)</li>
+                            <li>Tham gia hoạt động ngoại khoá, nâng cao nhận thức của cộng đồng về loại bệnh phổ biến của VN.</li>
+                            <li>Làm việc trong môi trường chuyên nghiệp, thân thiện, năng động và sáng tạo.</li>
+                            <li>Cơ hội giao lưu học hỏi, mở rộng mối quan hệ trong và ngoài nước.</li>
+                            <li>Tự trau dồi cho bản thân những kĩ năng cần thiết như: thảo luận điều phối, làm việc nhóm, thao tác trên các công cụ máy tính, xây dựng kế hoạch hoạt động, quản lí thời gian…</li>
+                            <li>Được nhận chứng chỉ có dấu xác nhận của Đại học Stanford, Hoa Kỳ khi hoàn thành 90% công việc được giao.</li>
+                        </ul>
+                    </li>
+                </ul>
+            <p>Chúng mình rất mong sẽ nhận được những lá đơn đầy nhiệt huyết của các bạn. Còn chần chờ gì nữa, hãy cùng đồng hành với Vietnam Team HBV trên chặng đường gây dựng và đem tới những giá trị thiết thực về sức khỏe đối với cộng đồng nhé!</p>
+        </section>
+    </section>
+
+    <section class = "thông-báo-đặc-quyền-tài-trợ">
+        <img src="../../Resources/Images/bbbb.png" class="image"></img>
+        <section class = "big-paragraph2">
+            <p>Vietnam Team HBV được ra đời với sứ mệnh nâng cao nhận thức của cộng đồng về căn bệnh viêm gan B, và để làm được điều đó, chúng mình cần bàn tay chung sức của những thành viên cần mẫn và năng động. Hiểu rõ điều này, Vietnam Team HBV mong muốn được thành lập một mạng lưới các câu lạc bộ tại các trường THPT khắp đất nước để có thể kết nối với các bạn học sinh, cùng đem lại nhiều giá trị tốt đẹp cho cộng đồng người Việt!</p>
+            <p>Team HBV là một nhánh nhỏ của Trung tâm Gan Châu Á tại Đại học Stanford, Hoa Kỳ. Vì vậy, Vietnam Team HBV vô cùng may mắn khi có cơ hội hợp tác cũng như được tài trợ một cách nhiệt tình bởi một trong những ngôi trường Đại học hàng đầu thế giới để lan tỏa thông điệp về sức khỏe con người, hay cụ thể hơn chính là căn bệnh viêm gan B.</p>
+            <p>Để có thể nhận được cơ hội tài trợ xuất chúng này, chúng mình cần sự góp sức hợp lực của các bạn - những mảnh ghép còn thiếu đầy tiềm năng của Vietnam Team HBV, trong việc lên ý tưởng các sự kiện quy mô cấp trường trên toàn thành phố Hà Nội. </p>
+            <p>Cụ thể hơn, các bạn có thể đọc các thông tin phía dưới để biết thêm các lưu ý khi nộp hồ sơ xin tài trợ:</p>
+            <p1> - Ai có thể nộp hồ sơ xin tài trợ?</p1>
+            <p>Chỉ cần bạn có ý nguyện muốn tham gia vào Vietnam Team HBV, đang “ấp ủ” những kế hoạch tổ chức sự kiện hay đơn giản muốn trải nghiệm những điều mới và giúp ích cho cộng đồng, bạn hoàn toàn có thể nộp hồ sơ để nhận khoản tài trợ lên tới 5,000,000 VNĐ.</p>
+            <p1> - Hồ sơ của bạn cần những gì</p1>
+            <p>+/ 1 Đề xuất tài trợ: nộp 1 bản Word mô tả phương thức hoạt động của chiến dịch (không quá 2 trang)</p>
+            <p>+/ 1 Ngân sách chi tiết: nộp 1 bản Excel (Ngân sách không quá 5 triệu đồng).</p>
+            <p>- Để hỗ trợ các bạn thuận tiện trong việc tham khảo, Vietnam Team HBV xin gửi đến các bạn một mẫu đề xuất tài trợ.</p>
+            <p>Mẫu đề xuất: https://tinyurl.com/maudexuattaitro</p>
+            <p>Mách bạn: Đây là cơ hội tuyệt vời để bạn có thể tự do dựng nên một bản kế hoạch tổ chức sự kiện “từ A đến Z" sử dụng chính “óc sáng tạo” của bản thân. Vì vậy nên đừng ngại mà hãy cứ thỏa sức vẽ nên bức tranh toàn cảnh hoạt động cho Team bạn nhé! Còn chần chừ gì nữa mà không đăng kí tham gia ngay vào đại gia đình toàn cầu Team HBV? Chúng mình rất hy vọng có thể cùng đồng hành với bạn trên chặng đường lan toả nhận thức về sức khoẻ. Hãy theo dõi page để được cập nhật các hoạt động sắp tới của Team nhé!</p>
+        </section>
+    </section>
+
 
 </body>
