--- a/Pages/communication/communication.html
+++ b/Pages/communication/communication.html
@@ -18,7 +18,8 @@
 
     <section class="header">
         <nav>
-            <a href = "../../../index.html"><img src = "../../Resources/Images/logo.png"></a>
+            <div class="image-box"><a href = "../../../index.html"><img src = "../../Resources/Images/logo.png"></a></div>
+            
             <div class="nav-links">
                 <ul>
                     <li><a href="../overview/overview.html">Tổng Quan</li></a>
@@ -28,6 +29,30 @@
                 </ul>
             </div>
         </nav>
+    </section>
+
+    <section class = "total">
+        <p1>Tờ Rơi</p1>
+        <p><a href="https://drive.google.com/drive/folders/16yMBJQHJMQKafaVrWQfCLXr8NByoZMCL?usp=sharing" target ="_blank">https://drive.google.com/drive/folders/16yMBJQHJMQKafaVrWQfCLXr8NByoZMCL?usp=sharing
+        </a></p>
+
+        <p1>Poster</p1>
+        <p><a href="https://drive.google.com/drive/folders/16yMBJQHJMQKafaVrWQfCLXr8NByoZMCL?usp=sharing" target ="_blank">https://drive.google.com/drive/folders/16yMBJQHJMQKafaVrWQfCLXr8NByoZMCL?usp=sharing
+        </a></p>
+
+        <p1>Video</p1>
+
+        <p1>Sổ tay thực hành</p1>
+        <p><a href="http://teamhbv.org/high-school-chapters/hs-manual/" target ="_blank">http://teamhbv.org/high-school-chapters/hs-manual/</a></p>
+
+        <p1>Tài liệu tham khảo</p1>
+        <p>Tài liệu phát tay Hiểu rõ về viêm gan B</p>
+        <p><a href="https://drive.google.com/drive/folders/1hmCUYigsdr-PGJ74ZqyhoEBQKaaYbMJE" target ="_blank">https://drive.google.com/drive/folders/1hmCUYigsdr-PGJ74ZqyhoEBQKaaYbMJE</a></p>
+        <p>Tài liệu phát tay Viêm gan B và mẹ tương lai</p>
+        <p><a href="https://drive.google.com/drive/folders/1hmCUYigsdr-PGJ74ZqyhoEBQKaaYbMJE" target ="_blank">https://drive.google.com/drive/folders/1hmCUYigsdr-PGJ74ZqyhoEBQKaaYbMJE</a></p>
+
+
+        
     </section>
 
 </body>
