--- a/Pages/event/event.html
+++ b/Pages/event/event.html
@@ -21,9 +21,10 @@
             <a href = "index.html"><img src = "../Resources/Images/logo.png"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="">About</li></a>
-                    <li><a href="../Content/patients/patient.html">For Patients</li></a>
-                    <li><a href="">For healthcare providers</li></a>
+                    <li><a href="Pages/overview/overview.html">About Us</li></a>
+                    <li><a href="Pages/activities/activities.html">Activities</li></a>
+                    <li><a href="Pages/communication/communication.html">Resources</li></a>
+                    <li><a href="Pages/signup/signup.html">Get Involved</li></a>
                 </ul>
             </div>
         </nav>
