--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             
             <div class="nav-links">
                 <ul>
-                    <li><a href="Pages/overview/overview.html">Tổng Quan</li></a>
-                    <li><a href="Pages/activities/activities.html">Hoạt Động</li></a>
-                    <li><a href="Pages/communication/communication.html">Tài Liệu Truyền Thông</li></a>
-                    <li><a href="Pages/signup/signup.html">Đăng Ký</li></a>
+                    <li><a href="Pages/overview/overview.html">About Us</li></a>
+                    <li><a href="Pages/activities/activities.html">Activities</li></a>
+                    <li><a href="Pages/communication/communication.html">Resources</li></a>
+                    <li><a href="Pages/signup/signup.html">Get Involved</li></a>
                 </ul>
             </div>
         </nav>
