testing the period

--- a/Pages/overview/overview.html
+++ b/Pages/overview/overview.html
@@ -10,14 +10,14 @@
 <body>
     <section class="header">
         <nav>
-            <div class="image-box"><a href = "../../../index.html"><img src = "../../Resources/Images/logo.png"></a></div>
+            <div class="image-box"><a href = "../../index.html"><img src = "../../Resources/Images/logo.png"></a></div>
             
             <div class="nav-links">
                 <ul>
-                    <li><a href="Pages/overview/overview.html">About Us</li></a>
-                    <li><a href="Pages/activities/activities.html">Activities</li></a>
-                    <li><a href="Pages/communication/communication.html">Resources</li></a>
-                    <li><a href="Pages/signup/signup.html">Get Involved</li></a>
+                    <li><a href="../overview/overview.html">About Us</li></a>
+                    <li><a href="../activities/activities.html">Activities</li></a>
+                    <li><a href="../communication/communication.html">Resources</li></a>
+                    <li><a href="../signup/signup.html">Get Involved</li></a>
                 </ul>
             </div>
         </nav>
