--- a/Pages/overview/overview.html
+++ b/Pages/overview/overview.html
@@ -60,6 +60,26 @@
             </p1>
         
         <h3>Our Team</h3>
+        <li>Founder, President: Tien Minh Nguyen</li>
+        <li>Advisory Board Members:
+            <ul >
+                <li>Child/Subitem
+                </li>
+            </ul>
+        </li>
+        <li>Head of Social Media: Hanh My Bui
+        </li>
+        <li>Head of Outreach: Hong Anh Pham
+        </li>
+        <li>Head of Design: Thao Thanh Nguyen
+        </li>
+        <li>Head of Human Resource: Mai Ngoc Nguyen
+        </li>
+        <li>Head of Treasure: Hung Truong Nguyen
+
+        </li>
+        <li>Photographer: Ngoc Minh Hoang
+        </li>
     
     <section class = "textbox2">
         <h1>Management Structure</h1>
