--- a/Pages/signup/signup.html
+++ b/Pages/signup/signup.html
@@ -22,10 +22,10 @@
             
             <div class="nav-links">
                 <ul>
-                    <li><a href="../overview/overview.html">Tổng Quan</li></a>
-                    <li><a href="../activities/activities.html">Hoạt Động</li></a>
-                    <li><a href="../communication/communication.html">Tài Liệu Truyền Thông</li></a>
-                    <li><a href="../signup/signup.html">Đăng Ký</li></a>
+                    <li><a href="../overview/overview.html">About Us</li></a>
+                    <li><a href="../activities/activities.html">Activities</li></a>
+                    <li><a href="../communication/communication.html">Resources</li></a>
+                    <li><a href="../signup/signup.html">Get Involved</li></a>
                 </ul>
             </div>
         </nav>
