--- a/Pages/activities/activities.html
+++ b/Pages/activities/activities.html
@@ -12,7 +12,7 @@
     <section class="header">
         <nav>
             <div class="image-box">
-                <a href = "../../../index.html"><img src = "../../Resources/Images/vnlogo.png"></a></div>
+                <a href = "../../web/index.html"><img src = "../../Resources/Images/vnlogo.png"></a></div>
             
             <div class="nav-links">
                 <ul>
