--- a/Pages/overview/overview.html
+++ b/Pages/overview/overview.html
@@ -15,7 +15,7 @@
             
             <div class="nav-links">
                 <ul>
-                    <li><a href="../../../../web/index.html">Home</li></a>
+                    <li><a href="../../../index.html">Home</li></a>
                     <li><a href="../overview/overview.html">About Us</li></a>
                     <li><a href="../activities/activities.html">Activities</li></a>
                     <li><a href="../communication/communication.html">Resources</li></a>
