--- a/Pages/signup/signup.html
+++ b/Pages/signup/signup.html
@@ -11,10 +11,10 @@
 
     <section class="header">
         <nav>
-            <div class="image-box"><a href = "../../../index.html"><img src = "../../Resources/Images/vnlogo.png"></a></div>
-            
+            <link rel="stylesheet" type="text/css" href="../../index.css"/>
             <div class="nav-links">
                 <ul>
+                    <a href = "../../../index.html"><img class = "logo" src = "../../Resources/Images/vnlogo.png"></a>
                     <li><a href="../../../index.html">Home</li></a>
                     <li><a href="../overview/overview.html">About Us</li></a>
                     <li><a href="../activities/activities.html">Activities</li></a>
