--- a/Pages/overview/overview.html
+++ b/Pages/overview/overview.html
@@ -9,12 +9,11 @@
 
 <body>
     <section class="header">
+        <link rel="stylesheet" type="text/css" href="../../index.css"/>
         <nav>
-            <div class="image-box">
-                <a href = "../../../index.html"><img src = "../../Resources/Images/vnlogo.png"></a></div>
-            
             <div class="nav-links">
                 <ul>
+                    <a href = "../../../index.html"><img class = "logo" src = "../../Resources/Images/vnlogo.png"></a>
                     <li><a href="../../../index.html">Home</li></a>
                     <li><a href="../overview/overview.html">About Us</li></a>
                     <li><a href="../activities/activities.html">Activities</li></a>
