--- a/Pages/communication/communication.html
+++ b/Pages/communication/communication.html
@@ -22,8 +22,8 @@
             <link rel="stylesheet" type="text/css" href="../../index.css"/>
             <div class="nav-links">
                 <ul>
-                    <a href = "../../../index.html"><img class = "logo" src = "../../Resources/Images/vnlogo.png"></a>
-                    <li><a href="../../../index.html">Home</li></a>
+                    <a href = "./../../index.html"><img class = "logo" src = "../../Resources/Images/vnlogo.png"></a>
+                    <li><a href="./../../index.html">Home</li></a>
                     <li><a href="../overview/overview.html">About Us</li></a>
                     <li><a href="../activities/activities.html">Activities</li></a>
                     <li><a href="../communication/communication.html">Resources</li></a>
