--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             
             <div class="nav-links">
                 <ul>
-                    <a href = "index.html"><img class = "logo" src = "Resources/Images/vnlogo.png"></a></a>
-                    <li><a href="index.html">Home</li></a>
+                    <a href = "./index.html"><img class = "logo" src = "Resources/Images/vnlogo.png"></a></a>
+                    <li><a href="./index.html">Home</li></a>
                     <li><a href="Pages/overview/overview.html">About Us</li></a>
                     <li><a href="Pages/activities/activities.html">Activities</li></a>
                     <li><a href="Pages/communication/communication.html">Resources</li></a>
