--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="box1">
         <div class = "patient-box1">
             <h1>Who We Are<br></br></h1>
-            <p1>Vietnam Team HBV gathers high school students who are pasionated about being future leaders in using sciences and technologies to create long-lasting impacts on community. Our high school clubs work to increase awareness of the dangers of hepatitis B and liver cancer, the ideals of the JoinJade Campaign, and provide information to better the health of the student body and the local community.</p1>
+            <p1>Vietnam Team HBV gathers high school students who are passionate about being future leaders in using sciences and technologies to create long-lasting impacts on the community. Our high school clubs work to increase awareness of the dangers of hepatitis B and liver cancer, the ideals of the JoinJade Campaign, and provide information to better the health of the student body and the local community.</p1>
         </div>
         
         <div class = "image-box1">
