--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Testing Website</title>
+    <title>HepB Vietnam</title>
     <link rel = "stylesheet" href = "index.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap');
