--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <div class = "col-2">
             <h3>Follow Us</h3>
-            <a href="https://www.facebook.com/groups/803142477465447"target="_blank"><img src = "Resources/decor/fb2a.png"></a>
+            <a href="https://www.facebook.com/profile.php?id=100085488465781"target="_blank"><img src = "Resources/decor/fb2a.png"></a>
 
 
         </div>
