fixed facebook links

--- a/Pages/communication/communication.html
+++ b/Pages/communication/communication.html
@@ -41,9 +41,9 @@
         <p><a href="http://teamhbv.org/high-school-chapters/hs-manual/" target ="_blank">http://teamhbv.org/high-school-chapters/hs-manual/</a></p>
 
         <h1>Know HBV</h1>
-        <p><a href="https://drive.google.com/drive/folders/1hmCUYigsdr-PGJ74ZqyhoEBQKaaYbMJE" target ="_blank">https://drive.google.com/drive/folders/1hmCUYigsdr-PGJ74ZqyhoEBQKaaYbMJE</a></p>
+        <p><a href="https://drive.google.com/file/d/1hB3onFULdyiWrWYZJ9SNqBwfWrsoioz_/view?usp=drive_link" target ="_blank">https://drive.google.com/file/d/1hB3onFULdyiWrWYZJ9SNqBwfWrsoioz_/view?usp=drive_link</a></p>
         <h1>Hep B Mom</h1>
-        <p><a href="https://drive.google.com/drive/folders/1hmCUYigsdr-PGJ74ZqyhoEBQKaaYbMJE" target ="_blank">https://drive.google.com/drive/folders/1hmCUYigsdr-PGJ74ZqyhoEBQKaaYbMJE</a></p>
+        <p><a href="https://drive.google.com/file/d/1BLN1MtErl5tO1hw6mUU6uKGgVYS0YeXo/view?usp=sharing" target ="_blank">https://drive.google.com/file/d/1BLN1MtErl5tO1hw6mUU6uKGgVYS0YeXo/view?usp=sharing</a></p>
 
         
             
@@ -78,7 +78,7 @@
 
         <div class = "col-2">
             <h3>Follow Us</h3>
-            <a href="https://www.facebook.com/groups/803142477465447"target="_blank"><img src = "../../Resources/decor/fb2a.png"></a>
+            <a href="https://www.facebook.com/profile.php?id=100085488465781"target="_blank"><img src = "../../Resources/decor/fb2a.png"></a>
 
 
         </div>
